--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,15 @@ span.material-symbols-outlined {
 h2 {
     font-family: 'Inter';
     font-size: var(--fs-h2);
+    background-color: transparent;
 }
 
 h4 {
     font-size: var(--fs-h4);
+}
+
+a {
+    background-color: transparent;
 }
 
 .index-banner-header {
@@ -447,21 +452,24 @@ h1 li a {
 }
 
 
-
 .landing-header-container {
     margin-left: var(--doc-w);
     width: 100%;
     margin-right: var(--spacing-margingRight);
+    z-index: 1;
+    background-color: transparent;
 }
 
 .landing-header-elements {
     width: var(--mwp-sh);
+    background-color: transparent;
 }
 
 
 .landing-header-container h1 {
     margin-bottom: 25px;
     width: var(--mwp-h);
+    background-color: transparent;
 }
 
 
@@ -469,6 +477,27 @@ h1 li a {
     font-size: var(--fs-landing_sh);
     font-weight: var(--fw-reg);
     margin-left: var(--mw-sh);
+    background-color: transparent;
+}
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+    opacity: .4;
+}
+
+.switch-button {
+    display: none;
+    position: absolute;
+    bottom: 5%;
+    margin-right: 120px;
+    z-index: 2;
+    right: 0;
 }
 
 /* SCROLL DOWN ARROW */
@@ -806,6 +835,7 @@ button {
     border: 1px solid var(--clr-secondary);
     font-weight: var(--fw-bold);
     outline: none;
+    background-color: transparent;
 }
 
 
@@ -1177,4 +1207,9 @@ iframe {
         .image-container .ooni-3phone {
         width: 50%;
     }
+
+    .video-container, .switch-button {
+        display: none;
+    }
+    
 }
